feat: add base form fetch

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
+  <header>
+    <h1>Formulário de pedidos</h1>
+  </header>
+
+  <main class="container">
+    <h1>Formulário de pedidos</h1>
+
+    <div id="form-body">
+      <form id="main-form">
+
+        <input type="submit" value="Enviar">
+      </form>
+    </div>
+  </main>
+
+  <footer>
+
+  </footer>
 
   <script src="js/index.js"></script>
 </body>
