--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
   <footer>
     &copy; 2018
-    <a href="https://alefesouza.com">Alefe Souza</a>
+    <a href="https://alefesouza.com" target="_blank">Alefe Souza</a>
   </footer>
 
   <script src="js/index.js"></script>
